# zmk-module-xiaord

./: Kconfig  README.md  custom_icons_demo.html
boards/shields/xiaord/: xiaord.conf  xiaord.overlay  zmk_behaviors.dtsi
drivers/input/: Kconfig  input_chsc6x_custom.c
dts/bindings/: xiaord,home-buttons.yaml
dts/bindings/input_processors/: zmk,input-processor-code-canceller.yaml
include/dt-bindings/xiaord/: icons.h  input_codes.h
src/: CMakeLists.txt  Kconfig
src/display/: CMakeLists.txt  Kconfig  display_api.h  page_bt.c  page_clock.c  page_home.c  page_iface.h  page_macropad.c  page_ops.h  status_screen.c  ui_btn.c  virtual_buttons.c  virtual_buttons.h
src/display/listeners/: CMakeLists.txt  battery_status.c  battery_status.h  endpoint_status.c  endpoint_status.h
src/display/pages/: CMakeLists.txt  page_bt.c  page_clock.c  page_home.c
src/display/ui/: CMakeLists.txt  custom_icons.c  home_buttons.c  home_buttons.h  icon_utf8.h  my_icon_amazon.c  my_icon_calc.c  sym_lookup.h  ui_btn.c  ui_btn.h
src/display/ui/bg/: bg1.c  bg2.c  bg3.c
src/pointing/: CMakeLists.txt  input_processor_code_canceller.c
